tests/errors/def_func_04.py
from lpython import i32
def func_04(x : i32 ,y : i32) -> i32 :
    print(x,y)

func_04(y=3)